Update variable names to new master. Fix incorrect spacing value.

--- a/stylesheets/trumps/_margin.scss
+++ b/stylesheets/trumps/_margin.scss
@@ -35,5 +35,5 @@
 // Styleguide 3.1.2
 
 .#{$bitstyles-namespace}t-margin {
-  margin: $bitstyles-margin;
+  margin: $bitstyles-spacing;
 }
