--- a/stylesheets/trumps/_padding.scss
+++ b/stylesheets/trumps/_padding.scss
@@ -35,5 +35,5 @@
 // Styleguide 3.4.2
 
 .#{$bitstyles-namespace}t-padding {
-  padding: 0;
+  padding: $bitstyles-spacing;
 }
